Fix ARMv7 silent spills https://bugs.webkit.org/show_bug.cgi?id=274770

Reviewed by Keith Miller.

After https://commits.webkit.org/279031@main and
https://commits.webkit.org/279337@main, we saw some
armv7 test failures. These changes match the 64-bit port.

* Source/JavaScriptCore/dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::nonSpeculativePeepholeStrictEq):
(JSC::DFG::SpeculativeJIT::genericJSValueNonPeepholeStrictEq):
(JSC::DFG::SpeculativeJIT::emitCall):
(JSC::DFG::SpeculativeJIT::compileGetByVal):
(JSC::DFG::SpeculativeJIT::compile):
* Source/JavaScriptCore/runtime/MapPrototype.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):

Canonical link: https://commits.webkit.org/279383@main